my-simple-k8-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    argocd.argoproj.io/instance: simple-app-olak
  name: http-echo-deployment
  namespace: hackolak2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: http-echo
    spec:
      containers:
      - args:
        - -text
        - WTF
        image: registry.napet.dyn.nesc.nokia.net/external/utils/hashicorp/http-echo
        imagePullPolicy: Always
        name: http-echo
        ports:
        - containerPort: 5678
          protocol: TCP
        resources: {}
