my-simple-k8-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    argocd.argoproj.io/instance: simple-app-olak
  name: http-echo-service
  namespace: hackolak2
spec:
  selector:
    app: http-echo
  ports:
    - protocol: TCP
      port: 85
      targetPort: 5678
  type: ClusterIP
